--- a/statuslayout/build.gradle
+++ b/statuslayout/build.gradle
@@ -24,3 +24,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     compileOnly "com.android.support:support-annotations:$supportVersion"
 }
+
+apply from: '../gradle/bintray.gradle'
