--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$supportVersion"
-//    implementation project(':statuslayout')
-    implementation 'com.henley.statuslayout:statuslayout:1.0.0'
+    implementation project(':statuslayout')
+//    implementation 'com.henley.android:statuslayout:1.0.0'
 }
