--- a/gradle/bintray.gradle
+++ b/gradle/bintray.gradle
@@ -19,9 +19,10 @@ def siteUrl = 'https://github.com/HenleyLee/StatusLayout'
 
 publish {
     userOrg = 'henleylee'
-    groupId = 'com.henley.statuslayout'
+    groupId = 'com.henley.android'
     artifactId = 'statuslayout'
     publishVersion = '1.0.0'
+    uploadName = 'StatusLayout'
     desc = 'Activity/Fragment 中切换不同状态页：有数据、无数据、加载中、加载失败、网络异常、网络不佳。'
     website = siteUrl
 }
